https/ingress-service.yaml
# @format

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  tls:
    - hosts:
        - hamzazahid.com
        - www.hamzazahid.com
      secretName: hamzazahid-com
  rules:
    - host: hamzazahid.com
      http:
        paths:
          - pathType: Prefix
            path: '/?(.*)'
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
    - host: hamzazahid.com
      http:
        paths:
          - pathType: Prefix
            path: '/api/?(.*)'
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
    - host: www.hamzazahid.com
      http:
        paths:
          - pathType: Prefix
            path: '/?(.*)'
            backend:
              service:
                name: client-cluster-ip-service
                port:
                  number: 3000
    - host: www.hamzazahid.com
      http:
        paths:
          - pathType: Prefix
            path: '/api/?(.*)'
            backend:
              service:
                name: server-cluster-ip-service
                port:
                  number: 5000
